--- a/src/less/mixins/button.less
+++ b/src/less/mixins/button.less
@@ -150,6 +150,8 @@
 .button-active-state(@background; @color: @white) {
     color: @color;
     background-color: @background;
+    box-shadow: inset 0 0 0 2px lighten(@background, 20%);
+    border: 1px solid lighten(@background, 20%);
 }
 
 // Button sizes
